minikube/example-java-springboot-webapp/deployment.patch.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "example-java-springboot-webapp"
spec:
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 500m
