minikube/example-java-springboot-webapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-java-springboot-webapp
spec:
  ingressClassName: ingress
  rules:
    - host: example.kimae.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example-java-springboot-webapp
                port:
                  name: http
